Include build info