@@ -2,8 +2,8 @@ package rs.laxsrbija.chores.adapter.in.web.service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.boot.info.BuildProperties;
 import org.springframework.stereotype.Service;
 import rs.laxsrbija.chores.adapter.in.web.model.Overview;
 import rs.laxsrbija.chores.application.port.in.CategoryInboundPort;
@@ -23,6 +23,7 @@ public class OverviewService {
   private final ItemInboundPort itemInboundPort;
   private final CategoryInboundPort categoryInboundPort;
   private final UserInboundPort userInboundPort;
+  private final BuildProperties buildProperties;
 
   public Overview getOverview() {
     final List<Task> tasks = taskInboundPort.getAll();
@@ -32,19 +33,20 @@ public class OverviewService {
             .filter(Task::isEnabled)
             .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() >= 0)
             .sorted(OCCURRENCE_COMPARATOR.thenComparingInt(task -> task.getHistory().size()))
-            .collect(Collectors.toList());
+            .toList();
 
     final List<Task> overdue =
         tasks.stream()
             .filter(Task::isEnabled)
             .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() < 0)
             .sorted(OCCURRENCE_COMPARATOR)
-            .collect(Collectors.toList());
+            .toList();
 
-    final List<Task> disabled = tasks.stream()
-        .filter(task -> !task.isEnabled())
-        .sorted(Comparator.comparing(Task::getName))
-        .collect(Collectors.toList());
+    final List<Task> disabled =
+        tasks.stream()
+            .filter(task -> !task.isEnabled())
+            .sorted(Comparator.comparing(Task::getName))
+            .toList();
 
     return Overview.builder()
         .upcoming(upcoming)
@@ -54,7 +56,7 @@ public class OverviewService {
         .itemCount(itemInboundPort.getAll().size())
         .categoryCount(categoryInboundPort.getAll().size())
         .userCount(userInboundPort.getAll().size())
+        .build(buildProperties.getTime().toString())
         .build();
   }
-
 }
